[package]
name = "lopbox"
version = "0.1.1"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"
homepage = "https://github.com/lausek/opbox"
repository = "https://github.com/lausek/opbox"
license-file = "LICENSE.md"

description = "Create a GTK based button dialog via command line."
keywords = ["button", "user", "dialog", "script"]
categories = ["command-line-utilities", "gui"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
argparse = "0.2.1"
serde_json = "1.0.39"
serde = "1.0.91"
serde_derive = "1.0.91"
gtk = "0.6.0"
